# fasthtml-data-editor

./: .gitignore  .pre-commit-config.yaml  README.md  main_hx.py  main_simple.py  pyproject.toml
.github/workflows/: tests.yml
tests/: test_hx.py  test_simple.py
workflows/: tests.yml
